# evanduke

./: .dockerignore  .flake8  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile-app-prod  Dockerfile-dev  Dockerfile-nginx-dev  Dockerfile-prod-app  Dockerfile-prod-nginx  Dockerfile.nginx  Makefile  README.md  app.py  docker-compose-app.service  docker-compose-prod.yml  docker-compose.yml  entrypoint-dev.sh  entrypoint.sh  lightsail-init.sh  manage.py  nginx.conf  nginx.conf.prod  nginx.dev.conf  pyproject.toml  task-definition.json
.github/workflows/: ci.yml  deploy-staging.yml
enterprises/: admin.py  apps.py  forms.py  models.py  recaptcha.py  tests.py  urls.py  views.py
enterprises/management/commands/: populate_database.py
enterprises/migrations/: 0001_initial.py  0002_frequentlyaskedquestion.py  0003_add_faq_ordering_field.py  0004_contactformsubmission_add_fields.py
enterprises/static/css/: about.css  background-style.css  element-style.css  faqs.css  footer.css  forms.css  general.css  index.css  menu.css  template.css  thank-you.css
enterprises/static/js/: general.js
enterprises/templates/admin/: contact_submission.html
enterprises/templates/enterprises/: about.html  base.html  business.html  contact-thank-you.html  contact.html  faqs.html  index.html  lessons.html  performances.html  recordings.html  research.html
evanduke/: asgi.py  settings.py  urls.py  wsgi.py
nginx/: nginx.conf
scripts/: deploy-to-prod.sh  deploy-to-staging.sh  deploy.sh
static/css/: background-style.css  general.css  menu.css  template.css
templates/: about.html  base.html  business.html  contact.html  index.html  lessons.html  performances.html  recordings.html  research.html
tests/: conftest.py  test_admin.py  test_commands.py  test_forms.py  test_recaptcha.py  test_views.py
