[tool.poetry]
name = "evanduke"
version = "0.0.0"
description = ""
authors = ["Heather Duke <clavierplayer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gunicorn = "^20.1.0"
django = "^4.2"
psycopg2-binary = "^2.9.6"
django-environ = "^0.10.0"
google-cloud-recaptcha-enterprise = "^1.12.1"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
flake8 = "^6.1.0"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
extend-exclude = "migrations/*"
